[package]
name = "pcb_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deeppcb = { path = "./deeppcb" }
rayon = "1.6.1"
serde = "1.0"
serde_derive = "1.0.117"
toml = "0.7.2"
opencv = "0.74.2"
lazy_static = "1.4.0"
time = "0.1"
serde_json = "1.0.93"
json = "0.12.4"
ndarray = "0.15.6"
rust_math = "0.3.7"
ndarray-npy = "0.8.1"
crossbeam-channel = "0.5.6"
[workspace]
members = [
    "deeppcb",
    "lisening"
]