[package]
name = "deeppcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.74.2"
ndarray = "0.15.6"
tch = "0.10.1"
torch-sys = "0.10.0"
serde_json = "1.0.93"
json = "0.12.4"
serde = "1.0"
time = "0.1"
toml = "0.7.2"
linfa-clustering = "0.6.1"
linfa-datasets = "0.6.1"
rand_xoshiro = "0.6.0"
approx = "0.5.1"
linfa = "0.6.1"
imageproc = "0.23.0"
rand = "0.8.5"
linfa-linalg = "0.1.0"
lazy_static = "1.4.0"
rayon = "1.6.1"
crossbeam-channel = "0.5.6"
linfa-nn = "0.6.1"